[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-cache-env"
version = "1.0.0"
description = "An OpenEnv-compliant adaptive cache eviction simulator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.0",
    "pydantic>=2.9.0",
    "openai>=1.55.0",
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"